kubernetes/apps/talos1018/homepage/app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
  labels:
    app: homepage
